Fix gap in .item class

--- a/src/components/layout/Header/Header/UserMultipliers/UserMultipliers.module.pcss
+++ b/src/components/layout/Header/Header/UserMultipliers/UserMultipliers.module.pcss
@@ -21,6 +21,7 @@
 .multiplierComponents {
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
 	gap: 6px;
 }
 
